feat: Add category proposals fetching